[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/Office/Calculator.gd" type="Script" id=1]
[ext_resource path="res://Code/ATM/ColorRect.gd" type="Script" id=2]
[ext_resource path="res://Artwork/Calc.png" type="Texture" id=3]
[ext_resource path="res://Code/ATM/Button1.tscn" type="PackedScene" id=4]
[ext_resource path="res://montserrat/segmental.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 5 )

[node name="Calc" type="Sprite"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 448.257, 289.782 )
rotation = 0.380482
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = -294.935
margin_top = -181.837
margin_right = 88.0654
margin_bottom = -93.837
rect_rotation = -21.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="HBox"]
margin_left = 23.0
margin_top = 4.0
margin_right = 383.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0123456789"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="TextureButton" parent="."]
margin_left = -119.364
margin_top = 207.885
margin_right = -20.3644
margin_bottom = 282.885
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="Button1"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
position = Vector2( 1.05969, -4.50513 )
polygon = PoolVector2Array( -1.16077, 83.9781, 4.45154, 90.5258, 87.2331, 90.9935, 97.0546, 84.9135, 99.3931, 4.9381, 89.1039, -1.6096, 14.7408, -1.14192, 4.45154, 4.4704 )
script = ExtResource( 2 )

[node name="Button2" parent="." instance=ExtResource( 4 )]
margin_left = -10.7679
margin_top = 155.987
margin_right = 88.2321
margin_bottom = 230.987
rect_rotation = -21.0

[node name="Button3" parent="." instance=ExtResource( 4 )]
margin_left = 93.2428
margin_top = 110.759
margin_right = 192.243
margin_bottom = 185.759
rect_rotation = -21.0

[node name="Button4" parent="." instance=ExtResource( 4 )]
margin_left = -173.971
margin_top = 83.4476
margin_right = -74.9715
margin_bottom = 158.448
rect_rotation = -21.0

[node name="Button5" parent="." instance=ExtResource( 4 )]
margin_left = -65.167
margin_top = 41.1378
margin_right = 33.833
margin_bottom = 116.138
rect_rotation = -21.0

[node name="Button6" parent="." instance=ExtResource( 4 )]
margin_left = 35.3004
margin_top = -3.88184
margin_right = 134.3
margin_bottom = 71.1182
rect_rotation = -21.0

[node name="Button7" parent="." instance=ExtResource( 4 )]
margin_left = -222.743
margin_top = -20.3546
margin_right = -123.743
margin_bottom = 54.6454
rect_rotation = -21.0

[node name="Button8" parent="." instance=ExtResource( 4 )]
margin_left = -121.859
margin_top = -64.3322
margin_right = -22.8589
margin_bottom = 10.6678
rect_rotation = -21.0

[node name="Button9" parent="." instance=ExtResource( 4 )]
margin_left = -13.0542
margin_top = -106.642
margin_right = 85.9458
margin_bottom = -31.6419
rect_rotation = -21.0

[node name="Button0" parent="." instance=ExtResource( 4 )]
margin_left = 33.0012
margin_top = 247.283
margin_right = 132.001
margin_bottom = 322.283
rect_rotation = -21.0

[node name="ButtonBack" type="TextureButton" parent="."]
margin_left = 152.0
margin_top = -26.0
margin_right = 206.0
margin_bottom = 34.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonBack"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -1.59351, 51.9476, 6.07544, 60.3362, 46.6449, 58.8257, 52.189, 50.2526, 49.6555, 4.03363, 42.9569, -2.48059, 7.06677, -3.86737, -2.27881, 2.87091 )
script = ExtResource( 2 )

[node name="ButtonAdd" type="TextureButton" parent="."]
margin_left = 209.0
margin_top = -54.0
margin_right = 256.0
margin_bottom = 8.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonAdd"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -5.37036, 57.7744, 6.04736, 64.2227, 40.9805, 64.6789, 47.4551, 55.1488, 46.7566, 5.12836, 41.015, -0.455261, 2.29358, -1.80255, -5.13818, 6.79694 )
script = ExtResource( 2 )

[node name="ButtonSub" type="TextureButton" parent="."]
margin_left = 180.0
margin_top = 32.0
margin_right = 234.0
margin_bottom = 85.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonSub"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -2.26379, 52.8339, 5.3656, 58.3912, 45.9745, 59.712, 52.4756, 52.0696, 51.8694, 8.65558, 48.002, 2.10175, 6.4624, 1.73785, -1.9657, 6.57538 )
script = ExtResource( 2 )

[node name="ButtonMulti" type="TextureButton" parent="."]
margin_left = 235.0
margin_top = 11.0
margin_right = 284.0
margin_bottom = 69.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonMulti"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( 1.11365, 49.0275, 6.9082, 58.3863, 42.8115, 60.7169, 49.2729, 50.243, 44.8652, 4.9942, 41.011, -0.615723, 8.9093, -1.11151, 0.507446, 5.61359 )
script = ExtResource( 2 )

[node name="ButtonDiv" type="TextureButton" parent="."]
margin_left = 210.422
margin_top = 95.8315
margin_right = 266.422
margin_bottom = 162.832
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonDiv"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -1.7489, 62.896, 6.15454, 66.1534, 52.171, 65.5108, 57.6573, 56.4537, 54.6604, 2.61206, 48.9547, -4.04364, 6.3053, -3.44812, -2.56384, 4.53363 )
script = ExtResource( 2 )

[node name="ButtonEnter" type="TextureButton" parent="."]
margin_left = 276.0
margin_top = 79.0
margin_right = 327.0
margin_bottom = 125.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonEnter"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -5.13879, 46.3588, 2.82751, 54.1055, 37.6517, 55.8644, 46.5209, 47.8826, 43.4612, -10.4484, 1.9342, -9.86859, -6.99756, -6.37616 )
script = ExtResource( 2 )

[node name="ButtonPower" type="TextureButton" parent="."]
margin_left = 94.0
margin_top = -172.0
margin_right = 175.0
margin_bottom = -99.0
rect_rotation = -21.0
focus_mode = 1
mouse_default_cursor_shape = 2
button_mask = 3
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Polygon2D" parent="ButtonPower"]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
polygon = PoolVector2Array( -3.65833, 65.6071, 7.79883, 74.8868, 66.2739, 71.2383, 75.6326, 65.4439, 75.8384, 12.5789, 66.2952, 5.16037, 11.5559, 5.92474, -5.36633, 10.8809 )
script = ExtResource( 2 )
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
[connection signal="pressed" from="ButtonSub" to="." method="_on_ButtonSub_pressed"]
[connection signal="pressed" from="ButtonMulti" to="." method="_on_ButtonMulti_pressed"]
[connection signal="pressed" from="ButtonDiv" to="." method="_on_ButtonDiv_pressed"]
[connection signal="pressed" from="ButtonEnter" to="." method="_on_ButtonEnter_pressed"]
[connection signal="pressed" from="ButtonPower" to="." method="_on_ButtonPower_pressed"]
